# colmobil-chatbot-project

./: .gitignore  Book1 1.xlsx  agents.py  colmobil (1).xlsx  colmobil 2.xlsx  database_column_names_hebrew.docx  dict_english_hebrew.json  leading_questions.docx  leading_questions.json  main.py  main_local.py  main_server.py  new_create_embeddings.ipynb  new_db_setup.ipynb  pyproject.toml  test.py  testserver.ipynb  tools.py
.ipynb_checkpoints/: new_db_setup-checkpoint.ipynb
