[tool.poetry]
name = "colmobil-poc"
version = "0.1.0"
description = ""
authors = ["talabElad <talab@elad.co.il>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "0.2.14"
pandas = "*"
numpy = "*"
requests = "*"
faiss-cpu = "*"
pymysql = "*"
boto3 = "*"
pydantic = "*"
sqlalchemy = "*"
redis = "*"
python-dotenv = "*"
IPython = "*"
Pillow = "*"
logging = "*"
openai = ">=1.55.1"
bs4 = ">=0.0.2"
prettytable = ">=3.12.0"
flask = ">=3.1.0"
flask-cors = ">=5.0.0"
jupyter = "*"
ipykernel = ">=6.29.5"
langchain-aws = ">=0.1.1"
openpyxl = ">=3.1.5"
chardet = ">=5.2.0"
notebook = ">=7.3.1"
python-docx = ">=1.1.2"
langchain-community = "0.2.12"
langchain-openai = "*"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
